# packages/courses-backend/src/controllers/courseController.ts
@@ -1,7 +1,9 @@
 import { Course } from "@course/common";
 import CourseModel from "@models/Course";
+import { ErrorResponse } from "@src/interfaces/ErrorDto";
+import { StatusCodes } from "http-status-codes";
 import { Logger } from "tslog";
-import { Body, Get, Post, Route } from "tsoa";
+import { Body, Get, Post, Response, Route, SuccessResponse } from "tsoa";
 
 const controllerName = "course-controller";
 const logger: Logger = new Logger({ name: `${controllerName}-logger` });
@@ -15,6 +17,9 @@ export default class CourseController {
     return data;
   }
   @Post("/")
+  @Response<ErrorResponse>(StatusCodes.UNAUTHORIZED, "Unauthorized error")
+  @Response<ErrorResponse>(StatusCodes.BAD_REQUEST, "Unauthorized error")
+  @SuccessResponse(StatusCodes.CREATED, "Created")
   public async createNewCourse(@Body() param: Course): Promise<Course> {
     const newCourse = await CourseModel.create(param);
     return newCourse;
